--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,13 +3,13 @@ name: Tests
 
 # This GitHub action runs your tests for each pull request and push.
 # Optionally, you can turn it on using a schedule for regular testing.
-on:
-  pull_request:
-    paths-ignore:
-      - 'README.md'
-  push:
-    paths-ignore:
-      - 'README.md'
+#on:
+#  pull_request:
+#    paths-ignore:
+#      - 'README.md'
+#  push:
+#    paths-ignore:
+#      - 'README.md'
 
 # Testing only needs permissions to read the repository contents.
 permissions:
